2026-2027/col26-27.css
/* ... */
.collection__item:hover::after {
    width: 100%;
}

/* User */
.user__actions {
    display: flex;
    max-width: 100px;
    width: 100%;
    justify-content: center;
}

.collections__toggle, .collections__dropdown {
    display: none;
}

.user__action__item img{
    transition: 0.2s;
    margin-left: auto;
    margin-right: 90px;
}

.user__action__item:hover img {
    transform: scale(1.1);
}

/* Recommendations */

.recommendations__title {
    font-size: 24px;
    font-weight: bold;
    font-family:sans-serif;
    text-align: center;

    margin: 80px 0;
    /* margin-top: 180px; */
}


/* Poems */
.poems {
    display: flex;
    flex-wrap: wrap;
}

.poems__item {
    height: 380px;
    width: 27%;
    margin: 0 35px 50px 35px;

    border: 2px solid #ccc0cc;
    border-radius: 10%;

    background-color: #e5e5e5b3;
}

.poems__item:first-child {
    width: 28%;
}

.poem__title {
    font-size: 18px;
    font-family:'Times New Roman', Times, serif;
    font-style: italic;
    font-weight: 600;

    padding: 10px;
    text-align: center;

    display: block;
    width: 100%;
    border-bottom: 2px solid #ccc0cc;
}

.poem__text {
    font-size: 17px;
    line-height: 1.5;
    font-family:'Times New Roman', Times, serif;
    font-style: italic;
    padding: 15px 0 0 20px;
}

.poem__container {
    width: 100%;
    height: 290px;
    border-bottom: 2px solid #ccc0cc;

    overflow: hidden;
    position: relative;
    line-height: 1.5;
}

.poem__container::after {
    content: "";
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    height: 7em;
    background: linear-gradient(to bottom, rgba(255,255,255,0), #ffffffd2);
    pointer-events: none;
}

.poem-container:not(.overflowed)::after {
  display: none;
}

.under__poem {
    display: flex;
    flex-wrap: wrap;
    align-items: center;

    text-align: right;
}

.poem__date {
    font-size: 18px;
    font-family:'Times New Roman', Times, serif;
    font-style: italic;
    color: #000000a0;

    display: flex;
    margin: 12px 0 20px 40px;
}

.poem__actions {
    display: flex;
    align-items: center;

    margin-left: auto;
    padding-right: 30px;
}

.poem__show-more {
    margin-bottom: 5px;
    margin-left: 15px;
    cursor: pointer;
}


/* Затемнение основного экрана (отдельный слой) */
body.overlay-active::before {
  content: "";
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.7); /* Полупрозрачный чёрный */
  z-index: 999;
}

/* Раскрытие стихотворения */
.poem-overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;

  display: none;
  justify-content: center;
  align-items: center;
  z-index: 1000;

  pointer-events: none;

  box-shadow: 0 0 25px rgba(0, 0, 0, 0.5);
}

.poem-overlay:active {
    display: block;
    pointer-events: auto;
}

/* Содержимое */
.poem-content {
  position: relative;
  width: 80%;
  max-width: 720px;
  max-height: 90vh;
  border-radius: 7%;
  overflow-y: auto;
  background: rgb(220, 220, 220);
  opacity: 1;
  border: 3px solid rgb(170, 170, 170);
  pointer-events: auto;

  justify-items: center;
}


.poem-content::-webkit-scrollbar {
    display: block;
    width: 5px;
}
.poem-content::-webkit-scrollbar-track {
    background: transparent;
    border-radius: 4px;
}
    
.poem-content::-webkit-scrollbar-thumb {
    background-color: #424242;
    border-radius: 4px;
}

.poem-content::-webkit-scrollbar-track-piece:end {
    background: transparent;
    margin-bottom: 12vh;
}

.poem-content::-webkit-scrollbar-track-piece:start {
    background: transparent;
    margin-top: 12vh;
}

/* "Закрыть" */
.close-btn {
  position: absolute;
  top: 10px;
  right: 10px;
  font-size: 24px;
  background: none;
  border: none;
  cursor: pointer;
}

/* Анимация */
@keyframes fadeIn {
  from { opacity: 0; }
  to { opacity: 1; }
}

.poem-overlay.active {
  display: flex;
  animation: fadeIn 0.3s ease;
  opacity: 1;
}


.poem-inner {
    margin: 25px 0;
    padding: 20px;
    justify-items: center;
    width: 60%;
    line-height: 1.6;

    background: #fff5;
    border-radius: 10px;
    border: 1px solid rgb(170, 170, 170);
}

.poem-title {
    margin-bottom: 16px;
    font-size: 20px;
    font-weight: 600;
    font-family: 'Times New Roman', Times, serif;
    font-style: italic;
}

.poem-text {
    font-family: 'Times New Roman', Times, serif;
    font-style: italic;
    font-size: 19px;
}

.poem-date {
    display: inline-block;
    position: relative;
    left: 135px;

    margin-top: 25px;

    font-size: 20px;
    font-family:'Times New Roman', Times, serif;
    font-style: italic;
    color: #000000a0;

    /* border-top: 1px solid rgb(170, 170, 170); */
    /* padding-top: 10px; */
}

.poem-date::before {
    content: "";
    position: absolute;
    top: -10px;
    left: -90px;
    right: -90px;

    height: 1px;
    background: rgb(170, 170, 170);
}





/* Media */

@media (max-width: 1140px) {

    /* Header */
    .collections {
        margin-left: 50px;
   }

   .collection__item {
        font-size: 18px;
   }

   /* Poems */
   .poems__item {
        margin-right: 15px;
        width: 300px;
   }

   .poems__item:first-child {
    width: 320px;
    }

   .poem__title {
    font-size: 17px;
   }

   .poem__text {
    font-size: 15px;
   }

   .poem__date {
    font-size: 16px;
   }

   .poem-content {
    max-width: 640px;
   }

   .poem-title {
    font-size: 18px;
   }

   .poem-text {
    font-size: 17px;
   }

   .poem-date {
    font-size: 18px;
    left: 120px;
   }
}
/* ... */

